PROJECT(CPPJIEBA)

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

include(GNUInstallDirs)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/deps/limonp/include
  ${PROJECT_SOURCE_DIR}/include)

if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    set (CMAKE_INSTALL_PREFIX "/usr/local/cppjieba" CACHE PATH "default install path" FORCE )
endif()

message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
message(STATUS "CMAKE_INSTALL_FULL_BINDIR: \"${CMAKE_INSTALL_FULL_BINDIR}\"")
message(STATUS "CMAKE_INSTALL_FULL_LIBDIR: \"${CMAKE_INSTALL_FULL_LIBDIR}\"")
message(STATUS "CMAKE_INSTALL_FULL_INCLUDEDIR: \"${CMAKE_INSTALL_FULL_INCLUDEDIR}\"")

ADD_DEFINITIONS(-O3 -Wall -g)
IF(APPLE) # mac os
    ADD_DEFINITIONS(-std=c++0x)
endif()

# cmake .. -DENC=GBK
# IF (DEFINED ENC)
#     ADD_DEFINITIONS(-DCPPJIEBA_${ENC})
# ENDIF()

ADD_SUBDIRECTORY(deps)
ADD_SUBDIRECTORY(test)

ENABLE_TESTING()
ADD_TEST(NAME ./test/test.run COMMAND ./test/test.run)
ADD_TEST(NAME ./load_test COMMAND ./load_test)
ADD_TEST(NAME ./demo COMMAND ./demo)

install(
  DIRECTORY ${PROJECT_SOURCE_DIR}/include/cppjieba
  DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR}
  )

install(
  DIRECTORY ${PROJECT_SOURCE_DIR}/deps/limonp/include/limonp
  DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR}
  )
install(
  DIRECTORY ${PROJECT_SOURCE_DIR}/dict
  DESTINATION ${CMAKE_INSTALL_PREFIX}
  )
