PROJECT(CPPJIEBA)

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

include(GNUInstallDirs)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/deps/limonp/include
  ${PROJECT_SOURCE_DIR}/include)

set(CMAKE_INSTALL_PREFIX "/usr/local")

ADD_DEFINITIONS(-O3 -Wall -g)
IF(APPLE) # mac os
    ADD_DEFINITIONS(-std=c++0x)
endif()

# cmake .. -DENC=GBK
# IF (DEFINED ENC)
#     ADD_DEFINITIONS(-DCPPJIEBA_${ENC})
# ENDIF()

if(NOT DISABLE_CPPJIEBA_TESTS)
  ADD_SUBDIRECTORY(deps)
  ADD_SUBDIRECTORY(test)

  ENABLE_TESTING()
  ADD_TEST(NAME ./test/test.run COMMAND ./test/test.run)
  ADD_TEST(NAME ./load_test COMMAND ./load_test)
  ADD_TEST(NAME ./demo COMMAND ./demo)
endif()

install(
  DIRECTORY ${PROJECT_SOURCE_DIR}/include/cppjieba
  DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR}
  )

install(
  DIRECTORY ${PROJECT_SOURCE_DIR}/deps/limonp/include/limonp
  DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR}
  )
install(
  DIRECTORY ${PROJECT_SOURCE_DIR}/dict
  DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/cppjieba
  )
